feat/fix: add OC for arty and fix arty target reference not clearing on entity death